--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -30,7 +30,7 @@
 <div ngc-view></div>
 
 <!-- App -->
-<script type="text/javascript" src="phonegap.js"></script>
+<!--<script type="text/javascript" src="phonegap.js"></script>-->
 <script type="text/javascript" src="js/vendor.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
