--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="app">
+
+      <!--manifest="studytime.manifest">-->
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
