--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -34,6 +34,7 @@
 <!-- App -->
 <!--<script type="text/javascript" src="phonegap.js"></script>-->
 <script type="text/javascript" src="js/vendor.js"></script>
+<script type="text/javascript" src="js/partials.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
