--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta name="description" content="StudyTime.me - твое личное учебное расписание, расписание аудиторий и преподавателей, обмен конспектами, учебниками и другими учебными материалама. Все в одном месте и доступно на всех устройствах.">
-    <meta name="author" content="StudyTime.me Team">
+    <meta name="author" content="StudyTime Team">
     <title>StudyTime</title>
     <!--if lte IE 7
         <script src='http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js'>
