--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+    <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic" rel="stylesheet" type="text/css">-->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="format-detection" content="telephone=no">
@@ -20,6 +20,15 @@
         <script src='//html5shiv.googlecode.com/svn/trunk/html5.js'>
     -->
     <link rel="stylesheet" href="/css/app.css">
+  </head>
+  <body>
+    <!-- Templates attach points-->
+    <div id="content"></div>
+
+    <!--<script type='text/javascript', src="phonegap.js">-->
+    <script type="text/javascript" src="/js/vendor.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
+    <script>$(function(){require('initialize');})</script>
     <script type="text/javascript">
       window.brunch = window.brunch || {};
       window.brunch['auto-reload'] = {enabled: true};
@@ -32,14 +41,5 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
-  </head>
-  <body>
-    <!-- Templates attach points-->
-    <div id="content"></div>
-
-    <!--<script type='text/javascript', src="phonegap.js">-->
-    <script type="text/javascript" src="/js/vendor.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
-    <script>$(function(){require('initialize');})</script>
   </body>
 </html>
