--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -7,8 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="mobile-web-app-capable" content="yes">    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta name="description" content="StudyTime.me - твое личное учебное расписание, расписание аудиторий и преподавателей, обмен конспектами, учебниками и другими учебными материалама. Все в одном месте и доступно на всех устройствах.">
     <meta name="author" content="StudyTime Team">
@@ -26,9 +25,9 @@
     <div id="content"></div>
 
     <!--<script type='text/javascript', src="phonegap.js">-->
-    <script type="text/javascript" src="/js/vendor.js"></script>
     <script type="text/javascript" src="/js/app.js"></script>
-    <script>$(function(){require('initialize');})</script>
+
+    <!-- Vendor scripts -->
     <script type="text/javascript">
       window.brunch = window.brunch || {};
       window.brunch['auto-reload'] = {enabled: true};
