--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -23,6 +23,10 @@
   <body>
     <!-- Templates attach points-->
     <div id="content"></div>
+    <div id="lightbox">
+      <div class="glow"></div>
+      <div class="wrap"></div>
+    </div>
 
     <!--<script type='text/javascript', src="phonegap.js">-->
     <script type="text/javascript" src="/js/app.js"></script>
