--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -24,7 +24,12 @@
     <!-- Templates attach points-->
     <div id="content"></div>
     <div id="lightbox">
-      <div class="glow"></div>
+      <div class="glow">
+        <div class="close">
+          <span class="text">Закрыть </span>
+          <span class="arrow">×</span>
+        </div>
+      </div>
       <div class="wrap"></div>
     </div>
 
