--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -48,6 +48,12 @@
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
+      (function(){
+        var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+        uv.src = '//widget.uservoice.com/IePGzeQerXM7fIzXinnP8g.js';
+        var s=document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(uv,s)
+      })();
     </script>
   </body>
 </html>
