--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -22,16 +22,21 @@
   </head>
   <body>
     <!-- Templates attach points-->
-    <div id="content"></div>
     <div id="lightbox">
-      <div class="glow">
-        <div class="close">
-          <span class="text">Закрыть </span>
-          <span class="arrow">×</span>
+      <div class="glow"></div>
+      <div class="wrap">
+        <div class="wrap">
+          <div class="close-wrap">
+            <div class="close">
+              <span class="text">Закрыть </span>
+              <span class="arrow">×</span>
+            </div>
+          </div>
+          <div class="lb-content"></div>
         </div>
       </div>
-      <div class="wrap"></div>
     </div>
+    <div id="content"></div>
 
     <!--<script type='text/javascript', src="phonegap.js">-->
     <script type="text/javascript" src="/js/app.js"></script>
