index makeup done

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/css/app.css">
   </head>
   <body>
-    <!-- Templates attach points-->
+    <!-- Lightbox container -->
     <div id="lightbox">
       <div class="glow"></div>
       <div class="wrap">
@@ -36,6 +36,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Templates attach points-->
     <div id="content"></div>
 
     <!--<script type='text/javascript', src="phonegap.js">-->
